[package]
name = "claude-sessions"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Claude Code sessions"
authors = ["Petros"]
license = "MIT"
repository = "https://github.com/petros/claude-sessions"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
colored = "2"
